--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
 
 
-	<!-- Navigation -->
-	<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+	<!--Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="#">Find an Experience</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
 				</ul>
 			</div>
 		</div>
-	</nav> -->
+	</nav>
 
 	<!-- Page Content -->
 	<div class="container">
@@ -70,74 +70,65 @@
 
 
 
-<!--city  -->
-		</div>
+		<!--city  -->
+	</div>
 
-<main class="container">
-	<h1>City Here</h1>
-	<div class="row">
-		<form>
-			<div class="col offset-s2 s7">
-				<div class="input-field">
-					<input type="text" placeholder="input city here" id="find-city" name="search" />
+	<main class="container">
+		<h1>City Here</h1>
+		<div class="row">
+			<form>
+				<div class="col offset-s2 s7">
+					<div class="input-field">
+						<input type="text" value="San Antonio" placeholder="input city here" id="find-city" name="search" />
+					</div>
 				</div>
-			</div>
 
-			<div class="col s3">
-				<button class="btn-large waves-effect waves-light" id="findCity" name="action">
+				<div class="col s3">
+					<button class="btn-large waves-effect waves-light" id="findCity" name="action">
 					<i class="material-icons right">search</i>
 
 				</button>
-			</div>
-		</form>
-	</div>
-
-
-
-<!--state  -->
-
-</div>
-
-<main class="container">
-<h1>state Here</h1>
-<div class="row">
-<form>
-	<div class="col offset-s2 s7">
-		<div class="input-field">
-			<input type="text" placeholder="input state here" id="find-state" name="search" />
+				</div>
+			</form>
 		</div>
-	</div>
 
-	<div class="col s3">
-		<!-- <button class="btn-large waves-effect waves-light" id="findState" name="action"> -->
-			<i class="material-icons right"></i>
 
-		</button>
-	</div>
-</form>
+
+		<!--state  -->
+
+		</div>
+
+		<main class="container">
+			<h1>state Here</h1>
+			<div class="row">
+				<form>
+					<div class="col offset-s2 s7">
+						<div class="input-field">
+							<input type="text"
+							value="Texas" placeholder="input state here" id="find-state" name="search" />
+						</div>
+					</div>
+
+					<div class="col s3">
+						<!-- <button class="btn-large waves-effect waves-light" id="findState" name="action"> -->
+						<i class="material-icons right"></i>
+
+						</button>
+					</div>
+				</form>
+				<div id="map_wrapper">
+				    <div id="map_canvas" class="mapping"></div>
+				</div>
+
+
+<div class= "map">
+
+
+
+
+
+
 </div>
-
-
-<iframe
-  width="300"
-  height="170"
-  frameborder="0"
-  scrolling="no"
-  marginheight="0"
-  marginwidth="0"
-  src="https://maps.google.com/maps?q='+YOUR_LAT+','+YOUR_LON+'&hl=es;z=14&amp;output=embed"
- >
- </iframe>
- <br />
- <<large>
-   <a
-    href="https://maps.google.com/maps?q='+data.lat+','+data.lon+'&hl=es;z=14&amp;output=embed"
-    style="color:#0000FF;text-align:left"
-    target="_blank"
-   >
-     See map bigger
-   </a>
- </large>
 
 
 
@@ -146,102 +137,130 @@
 	<div id="listings" class="row"></div>
 
 
-			<!-- Call to Action Well -->
-			<div class="card text-white bg-secondary my-4 text-center">
-				<div class="card-body">
-					<p class="text-white m-0">This is where i will palce more stuff</p>
-				</div>
-			</div>
 
-			<!-- Content Row -->
-			<div class="row">
-				<div class="col-md-4 mb-4">
-					<div class="card h-100">
-						<div class="card-body">
-							<h2 class="card-title">Contact Me At</h2>
-							<p class="card-text">
+				<div class="card text-white bg-secondary my-4 text-center">
+					<div class="card-body">
+						<p class="text-white m-0">
+
+
+							<html>
+							<head>
+								<style>
+									table,
+									th,
+									td {
+										border: 1px solid black;
+										border-collapse: collapse;
+									}
+
+									th,
+									td {
+										padding: 5px;
+									}
+
+									th {
+										text-align: left;
+									}
+								</style>
+							</head>
+
+							<body>
+text
+							<div id="listings" class="row"></div>
+
+							</body>
+
+							</html>
+						</p>
+					</div>
+				</div>
+
+				<!-- Content Row -->
+				<div class="row">
+					<div class="col-md-4 mb-4">
+						<div class="card h-100">
+							<div class="card-body">
+								<h2 class="card-title">Contact Me At</h2>
+								<p class="card-text">
 									<p>
-										Name: 	James Lockwood
+										Name: James Lockwood
 									</p>
 									<p>
-										Email me at: 		<a href="mailto:ksjjl05@gmail.com?Subject=Hello%20again" target="_top">	Send mail</a>
+										Email me at: <a href="mailto:ksjjl05@gmail.com?Subject=Hello%20again" target="_top">	Send mail</a>
+									</p>
+
+								</p>
+								<p>
+									snail mail me at: Galvanive 2nd Street District 119 Nueces St. Austin, TX 78701
 								</p>
 
-									</p>
-									<p>
-										snail mail me at:
-								Galvanive
-								2nd Street District
-								119 Nueces St.
-								Austin, TX 78701
-									</p>
-
 
 								</p>
 
-							</p>
-						</div>
-						<div class="card-footer">
-							<a href="#" class="btn btn-primary">More Info</a>
-						</div>
-					</div>
-				</div>
-				<!-- /.col-md-4 -->
-				<div class="col-md-4 mb-4">
-					<div class="card h-100">
-						<div class="card-body">
-							<h2 class="card-title">About</h2>
-							<p class="card-text">
-Hello, my name is James and I built this page because everytime I go to a new city or even when I go on vactaion I always run into the same problem. I don't know where to get the best views and a great trail run in at.  If your like me and your looking for adventure the this is the site for you. I have made it possible to put in a city and state and presto changeo you get a map with different trail that can be hike, biked, or run on.  I hope it finds you well.
-
-
-							</p>
-						</div>
-						<div class="card-footer">
-							<a href="#" class="btn btn-primary">More Info</a>
+								</p>
+							</div>
+							<div class="card-footer">
+								<a href="#" class="btn btn-primary">More Info</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<!-- /.col-md-4 -->
-				<div class="col-md-4 mb-4">
-					<div class="card h-100">
-						<div class="card-body">
-							<h2 class="card-title">Services</h2>
-							<p class="card-text">
-My site allows the individual to locate and cordinate different trails in a given city.
+					<!-- /.col-md-4 -->
+					<div class="col-md-4 mb-4">
+						<div class="card h-100">
+							<div class="card-body">
+								<h2 class="card-title">About</h2>
+								<p class="card-text">
+									Hello, my name is James and I built this page because everytime I go to a new city or even when I go on vactaion I always run into the same problem. I don't know where to get the best views and a great trail run in at. If your like me and your looking
+									for adventure the this is the site for you. I have made it possible to put in a city and state and presto changeo you get a map with different trail that can be hike, biked, or run on. I hope it finds you well.
 
 
-
-
-							</p>
-						</div>
-						<div class="card-footer">
-							<a href="#" class="btn btn-primary">More Info</a>
+								</p>
+							</div>
+							<div class="card-footer">
+								<a href="#" class="btn btn-primary">More Info</a>
+							</div>
 						</div>
 					</div>
+					<!-- /.col-md-4 -->
+					<div class="col-md-4 mb-4">
+						<div class="card h-100">
+							<div class="card-body">
+								<h2 class="card-title">Services</h2>
+								<p class="card-text">
+									My site allows the individual to locate and cordinate different trails in a given city.
+
+
+
+
+								</p>
+							</div>
+							<div class="card-footer">
+								<a href="#" class="btn btn-primary">More Info</a>
+							</div>
+						</div>
+					</div>
+					<!-- /.col-md-4 -->
+
 				</div>
-				<!-- /.col-md-4 -->
+				<!-- /.row -->
 
-			</div>
-			<!-- /.row -->
+				</div>
+				<!-- /.container -->
 
-		</div>
-		<!-- /.container -->
+				<!-- Footer -->
+				<footer class="py-5 bg-dark">
+					<div class="container">
+						<p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+					</div>
+					<!-- /.container -->
+				</footer>
 
-		<!-- Footer -->
-		<footer class="py-5 bg-dark">
-			<div class="container">
-				<p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
-			</div>
-			<!-- /.container -->
-		</footer>
-
-		<!-- Bootstrap core JavaScript -->
-		<!-- <script src="vendor/jquery/jquery.min.js"></script> -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-		</script>
-		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-		<script src="index.js"></script>
+				<!-- Bootstrap core JavaScript -->
+				<!-- <script src="vendor/jquery/jquery.min.js"></script> -->
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+				</script>
+				<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+				<script src="index.js"></script>
 
 </body>
 
