--- a/index.html
+++ b/index.html
@@ -13,254 +13,151 @@
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+	<!--jquerytag-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+	</script>
 	<!-- Custom styles for this template -->
 	<!-- <link href="css/small-business.css" rel="stylesheet"> -->
-
+	  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
+	<!-- Heading Row -->
 
 
-	<!--Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-		<div class="container">
-			<a class="navbar-brand" href="#">Find an Experience</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="file:///Users/jameslock86/Desktop/firstQuarterProject/Find-An-Experience/index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="file:///Users/jameslock86/Desktop/firstQuarterProject/Find-An-Experience/about.html">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="file:///Users/jameslock86/Desktop/firstQuarterProject/services.html">Services</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="file:///Users/jameslock86/Desktop/firstQuarterProject/contact.html">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+			<image src="pic1.jpeg" />
+
 
 	<!-- Page Content -->
 	<div class="container">
 		<div class="responses">
 		</div>
-		<!-- Heading Row -->
-		<div class="row my-4">
-			<div class="col-lg-8">
-				<img class="img-fluid rounded" <image src="pic1.jpeg" />
-			</div>
-			<!-- /.col-lg-8 -->
-			<div class="col-lg-4">
-				<h1>Find an Experience</h1>
-				<p>This is where i will place some stuff.</p>
-				<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
-			</div>
-			<!-- /.col-md-4 -->
-		</div>
-		<!-- /.row -->
 
+			<!--city  -->
 
-
-		<!--city  -->
-	</div>
-
-	<main class="container">
-		<h1>City Here</h1>
-		<div class="row">
-			<form>
-				<div class="col offset-s2 s7">
-					<div class="input-field">
-						<input type="text" value="San Antonio" placeholder="input city here" id="find-city" name="search" />
-					</div>
-				</div>
-
-				<div class="col s3">
-					<button class="btn-large waves-effect waves-light" id="findCity" name="action">
-					<i class="material-icons right">search</i>
-
-				</button>
-				</div>
-			</form>
-		</div>
-
-
-
-		<!--state  -->
-
-		</div>
 
 		<main class="container">
-			<h1>state Here</h1>
+			<h1>City Here</h1>
 			<div class="row">
 				<form>
 					<div class="col offset-s2 s7">
 						<div class="input-field">
-							<input type="text"
-							value="Texas" placeholder="input state here" id="find-state" name="search" />
+							<input type="text" value="San Antonio" placeholder="input city here" id="find-city" name="search"/>
 						</div>
 					</div>
 
-					<div class="col s3">
-						<!-- <button class="btn-large waves-effect waves-light" id="findState" name="action"> -->
-						<i class="material-icons right"></i>
 
-						</button>
-					</div>
 				</form>
-				<div id="map_wrapper">
-				    <div id="map_canvas" class="mapping"></div>
+			</div>
+
+
+
+			<!--state  -->
+
+	</div>
+
+	<main class="container">
+		<h1>State Here</h1>
+		<div class="row">
+			<form>
+				<div class="col offset-s2 s7">
+					<div class="input-field">
+						<input type="text" value="Texas" placeholder="input state here" id="find-state" name="search" />
+					</div>
 				</div>
 
+				<div class="col s3">
+					<!-- <button class="btn-large waves-effect waves-light" id="findState" name="action"> -->
+					<i class="material-icons right"></i>
+					<div class="col s3">
+						<button class="btn-large waves-effect waves-light" id="findCity" name="action">
+					<i class="material-icons right">search</i>
 
-<div class= "map">
+					</button>
+					</div>
 
+				</div>
+			</form>
+				</div>
+			<!--  future map to be used-->
+			<!-- <div id="map_wrapper">
+				<div id="map_canvas" class="mapping"></div>
+			</div> -->
 
-
-
-
-
+<div class= "flex">
+			<div class="map">
+			</div>
 </div>
 
-
-
-
-
-	<div id="listings" class="row"></div>
-
-
-
-				<div class="card text-white bg-secondary my-4 text-center">
-					<div class="card-body">
-						<p class="text-white m-0">
-
-
-							<html>
-							<head>
-								<style>
-									table,
-									th,
-									td {
-										border: 1px solid black;
-										border-collapse: collapse;
-									}
-
-									th,
-									td {
-										padding: 5px;
-									}
-
-									th {
-										text-align: left;
-									}
-								</style>
-							</head>
-
-							<body>
-text
-							<div id="listings" class="row"></div>
-
-							</body>
-
-							</html>
-						</p>
-					</div>
-				</div>
-
-				<!-- Content Row -->
-				<div class="row">
-					<div class="col-md-4 mb-4">
-						<div class="card h-100">
-							<div class="card-body">
-								<h2 class="card-title">Contact Me At</h2>
-								<p class="card-text">
-									<p>
-										Name: James Lockwood
-									</p>
-									<p>
-										Email me at: <a href="mailto:ksjjl05@gmail.com?Subject=Hello%20again" target="_top">	Send mail</a>
-									</p>
-
+			<!-- Content Row -->
+			<div class="row">
+				<div class="col-md-4 mb-4">
+					<div class="card h-100">
+						<div class="card-body">
+							<h2 class="card-title">Contact Me At</h2>
+							<p class="card-text">
+								<p>
+									Name: James Lockwood
 								</p>
 								<p>
-									snail mail me at: Galvanive 2nd Street District 119 Nueces St. Austin, TX 78701
+									Email me at: <a href="mailto:ksjjl05@gmail.com?Subject=Hello%20again" target="_top">	Send mail</a>
 								</p>
 
+							</p>
+							<p>
+								snail mail me at: Galvanive 2nd Street District 119 Nueces St. Austin, TX 78701
+							</p>
 
-								</p>
 
-								</p>
-							</div>
-							<div class="card-footer">
-								<a href="#" class="btn btn-primary">More Info</a>
-							</div>
+							</p>
+
+							</p>
 						</div>
 					</div>
-					<!-- /.col-md-4 -->
-					<div class="col-md-4 mb-4">
-						<div class="card h-100">
-							<div class="card-body">
-								<h2 class="card-title">About</h2>
-								<p class="card-text">
-									Hello, my name is James and I built this page because everytime I go to a new city or even when I go on vactaion I always run into the same problem. I don't know where to get the best views and a great trail run in at. If your like me and your looking
-									for adventure the this is the site for you. I have made it possible to put in a city and state and presto changeo you get a map with different trail that can be hike, biked, or run on. I hope it finds you well.
-
-
-								</p>
-							</div>
-							<div class="card-footer">
-								<a href="#" class="btn btn-primary">More Info</a>
-							</div>
-						</div>
-					</div>
-					<!-- /.col-md-4 -->
-					<div class="col-md-4 mb-4">
-						<div class="card h-100">
-							<div class="card-body">
-								<h2 class="card-title">Services</h2>
-								<p class="card-text">
-									My site allows the individual to locate and cordinate different trails in a given city.
-
-
-
-
-								</p>
-							</div>
-							<div class="card-footer">
-								<a href="#" class="btn btn-primary">More Info</a>
-							</div>
-						</div>
-					</div>
-					<!-- /.col-md-4 -->
-
 				</div>
-				<!-- /.row -->
+				<!-- /.col-md-4 -->
+				<div class="col-md-4 mb-4">
+					<div class="card h-100">
+						<div class="card-body">
+							<h2 class="card-title">About</h2>
+							<p class="card-text">
+								Hello, my name is James and I built this page because everytime I go to a new city or even when I go on vactaion I always run into the same problem. I don't know where to get the best views and a great trail run in at. If your like me and your looking
+								for adventure the this is the site for you. I have made it possible to put in a city and state and presto changeo you get a map with different trail that can be hike, biked, or run on. I hope it finds you well.
 
-				</div>
-				<!-- /.container -->
 
-				<!-- Footer -->
-				<footer class="py-5 bg-dark">
-					<div class="container">
-						<p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+							</p>
+						</div>
 					</div>
-					<!-- /.container -->
-				</footer>
+				</div>
+				<!-- /.col-md-4 -->
+				<div class="col-md-4 mb-4">
+					<div class="card h-100">
+						<div class="card-body">
+							<h2 class="card-title">Services</h2>
+							<p class="card-text">
+								My site allows the individual to locate and cordinate different trails in a given city.
+							</p>
+						</div>
+					</div>
+				</div>
+				<!-- /.col-md-4 -->
 
-				<!-- Bootstrap core JavaScript -->
-				<!-- <script src="vendor/jquery/jquery.min.js"></script> -->
-				<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-				</script>
-				<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-				<script src="index.js"></script>
+			</div>
+			<!-- /.row -->
+
+
+
+		</div>
+		<!-- /.container -->
+
+		<!-- Footer -->
+		<footer class="py-5 bg-dark">
+			<div class="container">
+				<p class="m-0 text-center text-white">Find an Experience 2017</p>
+			</div>
+
+		</footer>
+		<script src="index.js"></script>
 
 </body>
 
