--- a/index.html
+++ b/index.html
@@ -18,146 +18,144 @@
 	</script>
 	<!-- Custom styles for this template -->
 	<!-- <link href="css/small-business.css" rel="stylesheet"> -->
-	  <link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
-	<!-- Heading Row -->
 
+<section class="container-Find-an-Experience">
 
-			<image src="pic1.jpeg" />
-
-
-	<!-- Page Content -->
-	<div class="container">
-		<div class="responses">
+	<body>
+		<!-- Heading Row -->
+		<div class="Heading-and-picture-shoe">
+<div class="intro">
+			<h1>Find an Experience</h1>
+			<p>This is where we are going to put some text!</p>
 		</div>
-
+		<div class="pic1">
+			<image src="pic1.jpeg" />
+		</div>
+</section>
 			<!--city  -->
+<section class="serach-part">
 
 
-		<main class="container">
-			<h1>City Here</h1>
-			<div class="row">
-				<form>
-					<div class="col offset-s2 s7">
-						<div class="input-field">
-							<input type="text" value="San Antonio" placeholder="input city here" id="find-city" name="search"/>
+				<h2>City Here</h2>
+				<div class="row">
+					<form>
+						<div class="col offset-s8 s10">
+							<div class="input-field">
+								<input type="text" value="San Antonio" placeholder="input city here" id="find-city" name="search" />
+							</div>
 						</div>
-					</div>
-
-
-				</form>
-			</div>
-
-
-
-			<!--state  -->
-
-	</div>
-
-	<main class="container">
-		<h1>State Here</h1>
-		<div class="row">
-			<form>
-				<div class="col offset-s2 s7">
-					<div class="input-field">
-						<input type="text" value="Texas" placeholder="input state here" id="find-state" name="search" />
-					</div>
+					</form>
 				</div>
+				<!--state  -->
 
-				<div class="col s3">
-					<!-- <button class="btn-large waves-effect waves-light" id="findState" name="action"> -->
-					<i class="material-icons right"></i>
-					<div class="col s3">
+					<h2>State Here</h2>
+					<div class="row">
+						<form>
+							<div class="col offset-s2 s7">
+								<div class="input-field">
+									<input type="text" value="Texas" placeholder="input state here" id="find-state" name="search" />
+								</div>
+							</div>
+
+							<div class="col s3">
+								<i class="material-icons right"></i>
+								<div class="col s3">
+
+								</div>
+
+							</div>
+
+
+						</form>
 						<button class="btn-large waves-effect waves-light" id="findCity" name="action">
-					<i class="material-icons right">search</i>
-
-					</button>
+		<i class="material-icons right">search</i>
+		</button>
 					</div>
+		</div>
+</section>
 
-				</div>
-			</form>
-				</div>
-			<!--  future map to be used-->
-			<!-- <div id="map_wrapper">
-				<div id="map_canvas" class="mapping"></div>
-			</div> -->
+	
+			<div class="map"></div>
 
-<div class= "flex">
-			<div class="map">
+
+
+
+<section class="bio-of-me">
+		<!-- Content Row -->
+		<div class="row">
+			<div class="col-md-4 mb-4">
+				<div class="card h-100">
+					<div class="card-body">
+						<h2 class="card-title">Services</h2>
+						<p class="card-text">
+							My site allows the individual to locate and cordinate different trails in a given city.
+						</p>
+					</div>
+				</div>
 			</div>
-</div>
 
-			<!-- Content Row -->
-			<div class="row">
-				<div class="col-md-4 mb-4">
-					<div class="card h-100">
-						<div class="card-body">
-							<h2 class="card-title">Contact Me At</h2>
-							<p class="card-text">
-								<p>
-									Name: James Lockwood
-								</p>
-								<p>
-									Email me at: <a href="mailto:ksjjl05@gmail.com?Subject=Hello%20again" target="_top">	Send mail</a>
-								</p>
 
+
+			<!-- /.col-md-4 -->
+			<div class="col-md-4 mb-4">
+				<div class="card h-100">
+					<div class="card-body">
+						<h2 class="card-title">About</h2>
+						<p class="card-text">
+							Hello, my name is James and I built this page because everytime I go to a new city or even when I go on vactaion I always run into the same problem. I don't know where to get the best views and a great trail run in at. If your like me and your looking
+							for adventure the this is the site for you. I have made it possible to put in a city and state and presto changeo you get a map with different trail that can be hike, biked, or run on. I hope it finds you well.
+
+
+						</p>
+					</div>
+				</div>
+			</div>
+			<!-- /.col-md-4 -->
+			<div class="col-md-4 mb-4">
+				<div class="card h-100">
+					<div class="card-body">
+						<h2 class="card-title">Contact Me At</h2>
+						<p class="card-text">
+							<p>
+								Name: James Lockwood
 							</p>
 							<p>
-								snail mail me at: Galvanive 2nd Street District 119 Nueces St. Austin, TX 78701
+								Email me at: <a href="mailto:ksjjl05@gmail.com?Subject=Hello%20again" target="_top">	Send mail</a>
 							</p>
 
+						</p>
+						<p>
+							snail mail me at: Galvanive 2nd Street District 119 Nueces St. Austin, TX 78701
+						</p>
 
-							</p>
 
-							</p>
-						</div>
+						</p>
+
+						</p>
 					</div>
 				</div>
-				<!-- /.col-md-4 -->
-				<div class="col-md-4 mb-4">
-					<div class="card h-100">
-						<div class="card-body">
-							<h2 class="card-title">About</h2>
-							<p class="card-text">
-								Hello, my name is James and I built this page because everytime I go to a new city or even when I go on vactaion I always run into the same problem. I don't know where to get the best views and a great trail run in at. If your like me and your looking
-								for adventure the this is the site for you. I have made it possible to put in a city and state and presto changeo you get a map with different trail that can be hike, biked, or run on. I hope it finds you well.
-
-
-							</p>
-						</div>
-					</div>
-				</div>
-				<!-- /.col-md-4 -->
-				<div class="col-md-4 mb-4">
-					<div class="card h-100">
-						<div class="card-body">
-							<h2 class="card-title">Services</h2>
-							<p class="card-text">
-								My site allows the individual to locate and cordinate different trails in a given city.
-							</p>
-						</div>
-					</div>
-				</div>
-				<!-- /.col-md-4 -->
-
 			</div>
-			<!-- /.row -->
-
-
+			<!-- /.col-md-4 -->
 
 		</div>
-		<!-- /.container -->
+		<!-- /.row -->
 
-		<!-- Footer -->
-		<footer class="py-5 bg-dark">
-			<div class="container">
-				<p class="m-0 text-center text-white">Find an Experience 2017</p>
-			</div>
 
-		</footer>
-		<script src="index.js"></script>
+
+</section>
+<!-- /.container -->
+
+<!-- Footer -->
+<footer class="py-5 bg-dark">
+	<div class="container">
+		<p class="m-0 text-center text-white">Find an Experience 2017</p>
+	</div>
+
+</footer>
+<script src="index.js"></script>
 
 </body>
 
