350 happy from here on my map work still need to make it work on only 1 map though

--- a/index.html
+++ b/index.html
@@ -77,8 +77,26 @@
 		</div>
 </section>
 
-	
-			<div class="map"></div>
+<!--map set1-->
+			<!-- <div class="map"></div> -->
+
+
+			<!--  map set 2-->
+			<div id="map_wrapper">
+					<div id="map_canvas" class="mapping"></div>
+				</script>
+				    <!-- <script async defer
+				    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQse9dG32PSHCCebegk2KeBTfmuvLH6fc&callback=map">
+				    </script> -->
+
+				</div>
+
+
+
+
+
+
+
 
 
 
